US-11, Event driven architecture using Kafka

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
 		<module>spring-order-microservice</module>
 		<module>spring-inventory-microservice</module>
 		<module>spring-gateway-microservice</module>
+		<module>spring-notification-microservice</module>
 	</modules>
 
 	<build>
