--- a/spring-order-microservice/src/main/resources/application.properties
+++ b/spring-order-microservice/src/main/resources/application.properties
@@ -31,3 +31,10 @@ resilience4j.retry.instances.inventory.wait-duration=5s
 #Zipkin
 management.zipkin.tracing.endpoint=http://192.168.1.237:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
+#Kafka
+#spring.kafka.bootstrap-servers=192.168.1.237:9092
+spring.kafka.bootstrap-servers=http://192.168.1.237:9092
+spring.kafka.template.default-topic=notificationTopic
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=event:com.vichamalab.order_service.event.OrderPlacedEvent
